# ecmonorepo

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  PRODUCERS.yaml  README.md  bazel-bazel-app  bazel-bin  bazel-out  bazel-testlogs  composite-build-spec.yaml  producer.yaml  rules_jvm_external++maven+maven_install.json
.claude/skills/composite-build/: SKILL.md
.github/workflows/: ci.yml  composite-build.yml
consumer/: BUILD
consumer/src/main/java/com/example/consumer/: Application.java
consumer/src/test/java/com/example/consumer/: ApiContractTest.java  UserServiceIntegrationTest.java
docs/: composite-build.html  dependency-graph.html  index.html  static-graph.html  style.css
midlib/: BUILD
src/main/java/com/example/app/: App.java
