module(
    name = "ecmonorepo",
    version = "1.0.0",
)

bazel_dep(name = "rules_java", version = "9.3.0")

# Contributed JVM rules with Gazelle Java extension
bazel_dep(name = "contrib_rules_jvm", version = "0.32.0")

# Override rules_go to a Bazel 9-compatible version (transitive dep of contrib_rules_jvm)
bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "io_bazel_rules_go")

# Gazelle (transitive dep of contrib_rules_jvm)
bazel_dep(name = "gazelle", version = "0.47.0")

# Maven dependency management
bazel_dep(name = "rules_jvm_external", version = "6.7")

# Cross-repo dependency: producer monorepo
bazel_dep(name = "composite-monorepo", version = "1.0.0")
local_path_override(
    module_name = "composite-monorepo",
    path = "../bazel-monorepo",
)

# Maven dependencies for consumer tests
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.junit.jupiter:junit-jupiter-api:5.10.1",
        "org.junit.jupiter:junit-jupiter-engine:5.10.1",
        "org.junit.platform:junit-platform-commons:1.10.1",
        "org.junit.platform:junit-platform-engine:1.10.1",
        "org.junit.platform:junit-platform-launcher:1.10.1",
        "org.junit.platform:junit-platform-reporting:1.10.1",
        "org.opentest4j:opentest4j:1.3.0",
        "org.apiguardian:apiguardian-api:1.1.2",
        "org.assertj:assertj-core:3.25.3",
        "net.bytebuddy:byte-buddy:1.14.11",
    ],
    lock_file = "//:rules_jvm_external++maven+maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
